manifests/test/prometheus/templates/alertmanager/service.yaml
---
# Source: prometheus/templates/alertmanager/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    component: "alertmanager"
    app: prometheus
    release: prometheus
    chart: prometheus-15.4.0
    heritage: Helm
  name: prometheus-alertmanager
  namespace: prometheus
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 9093
      nodePort: 30903
  selector:
    component: "alertmanager"
    app: prometheus
    release: prometheus
  sessionAffinity: None
  type: "ClusterIP"
